# MonstersRemastered

./: README.md
Application/Tauri/host/: index.html  package.json  pnpm-lock.yaml
Application/Tauri/host/src/: App.css  App.tsx  index.css  main.tsx
Application/Tauri/host/src-tauri/: Cargo.toml  tauri.conf.json
Application/Tauri/host/src-tauri/src/: lib.rs  main.rs
Arduino/: Arduino.ino
Arduino/Mega2560/: Mega2560.ino
Arduino/Nano33IoT/: Nano33IoT.ino
Box/Parts/: bottom.20250903-234949.FCBak  bottom.FCStd
Console/c#/: Backend.cs  Frontend.cs  Handler.cs  c#.csproj  c#.sln  project.json
Console/python/: backend.py  frontend.py  main.py
Console/rust/: Cargo.toml
Console/rust/src/: backend.rs  frontend.rs  main.rs
Front End/: console_layout_win.ps1
Front End/host/: manifest.webmanifest  package.json
Front End/host/src/: App.css  App.tsx
Front End/raw/: index.css  index.html  index.js  index.ts  tsconfig.json
Minimal/: README.txt
Minimal/Python/: minimal.py
