[package]
name = "monsters-console"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rdev = "0.5.3"
serial2 = "0.2.29"
serialport = "4.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.17.2"
winapi = "0.3.9"
widestring = "1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.9.3"
nix = "0.30.1"

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "0.1.5"
core-foundation = "0.10.0"
