[package]
name = "monster-controller"
version = "0.1.0"
description = "Monster Controller"
authors = ["JJ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monster_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

serialport = "4.7.1"
serial2 = "0.2.29"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.17.2"
winapi = "0.3.9"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.9.3"
nix = "0.30.1"

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "0.1.5"
core-foundation = "0.10.0"
